@@ -777,7 +777,7 @@ class GO_Core_Controller_Core extends GO_Base_Controller_AbstractController {
 	
 	
 	protected function actionAbout($params){
-		
+		echo str_repeat('bla die bla\n', 1000);
 		$response['data']['mailbox_usage']=intval(GO::config()->get_setting('mailbox_usage'));
 		$response['data']['file_storage_usage']=intval(GO::config()->get_setting('file_storage_usage'));
 		$response['data']['database_usage']=intval(GO::config()->get_setting('database_usage'));
